# Demo-cmake

./: README.md
sample/: CMakeLists.txt
sample/lib/: libtest.dylib
sample/src/: main.c
sample/src/test/: test.c  test.h
